# tuicr-wrapper

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  incr.toml  main.py  pyproject.toml
.claude/: settings.local.json
incremental_review/: cli.py  commands.py  git.py  models.py  review_store.py  settings.py  subprocess_runner.py
tests/: test_cli.py  test_commands.py  test_review_store.py  test_settings.py
