[project]
name = "incremental-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer", "pydantic"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.scripts]
incremental-review = "main:main"
incr = "main:main"

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pyrefly>=0.54.0",
    "typer>=0.24.1",
]
