[project]
name = "incremental-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "pydantic",
    "pydantic-settings>=2.13.1",
    "tomli-w>=1.2.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.scripts]
incremental-review = "incremental_review.cli:app"
incr = "incremental_review.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "polyfactory>=3.3.0",
    "pyrefly>=0.54.0",
    "pytest>=9.0.2",
]
